--- a/templates/header.html
+++ b/templates/header.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-<header class="mb-4 border-bottom">
+<header class="mb-4">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a class="py-4 d-flex align-items-center my-2 my-lg-0 me-lg-auto text-black text-decoration-none"
+            <a class="py-4 d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none"
                href="index.php">
                 {% if custom_header %}
                     {% include ('custom/header.html') %}
