--- a/templates/edit_perm_templ.html
+++ b/templates/edit_perm_templ.html
@@ -32,7 +32,7 @@
             {% set has_perm = "checked" %}
             {% endif %}
             {% endfor %}
-            <td><input type="checkbox" name="perm_id[]" value="{{ permission['id'] }}" {{ has_perm }}></td>
+            <td><input class="form-check-input" type="checkbox" name="perm_id[]" value="{{ permission['id'] }}" {{ has_perm }}></td>
             <td>{{ permission['name'] }}</td>
             <td>{% trans descr %}</td>
         </tr>
