--- a/templates/users.html
+++ b/templates/users.html
@@ -58,7 +58,7 @@
 
             {% if ldap_use %}
             {% if perm_is_godlike %}
-            <td><input type="checkbox" name="user[{{ user['uid'] }}][use_ldap]" {{ use_ldap }}></td>
+            <td><input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][use_ldap]" {{ use_ldap }}></td>
             {% else %}
             {% if use_ldap == "checked" %}
             <td>Yes</td>
@@ -69,7 +69,7 @@
             {% endif %}
 
             {% if user['uid'] != session_userid %}
-            <td><input type="checkbox" name="user[{{ user['uid'] }}][active]" {{ active }}></td>
+            <td><input class="form-check-input" type="checkbox" name="user[{{ user['uid'] }}][active]" {{ active }}></td>
             {% else %}
             <td><input type="hidden" name="user[{{ user['uid'] }}][active]" value="on"></td>
             {% endif %}
