Make forms and tables smaller to fit the content.

--- a/install/templates/step2.html
+++ b/install/templates/step2.html
@@ -6,5 +6,5 @@
 <form method="post">
     <input type="hidden" name="language" value="{{ language }}">
     <input type="hidden" name="step" value="{{ next_step }}">
-    <input type="submit" name="submit" class="btn btn-primary" value="{% trans 'Go to step' %} {{ next_step }}">
+    <input type="submit" name="submit" class="btn btn-primary btn-sm" value="{% trans 'Go to step' %} {{ next_step }}">
 </form>
