--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,20 +1,20 @@
-<h4 class="mb-3">{% trans 'Change password' %}</h4>
+<h5 class="mb-3">{% trans 'Change password' %}</h5>
 <form method="post" action="change_password.php">
     <div class="row g-2 col-sm-4">
         <div>
             <label for="current_password" class="form-label">{% trans 'Current password' %}</label>
-            <input type="password" class="form-control" id="current_password" name="currentpass" value="">
+            <input type="password" class="form-control form-control-sm" id="current_password" name="currentpass" value="">
         </div>
         <div>
             <label for="new_password" class="form-label">{% trans 'New password' %}</label>
-            <input type="password" class="form-control" id="new_password" name="newpass" value="">
+            <input type="password" class="form-control form-control-sm" id="new_password" name="newpass" value="">
         </div>
         <div>
             <label for="repeat_password" class="form-label">{% trans 'Repeat password' %}:</label>
-            <input type="password" class="form-control" id="repeat_password" name="newpass2" value="">
+            <input type="password" class="form-control form-control-sm" id="repeat_password" name="newpass2" value="">
         </div>
         <div>
-            <input type="submit" class="btn btn-primary" name="submit" value="{% trans 'Change password' %}">
+            <input type="submit" class="btn btn-primary btn-sm" name="submit" value="{% trans 'Change password' %}">
         </div>
     </div>
 </form>
