--- a/templates/list_zone_templ.html
+++ b/templates/list_zone_templ.html
@@ -1,5 +1,5 @@
-<h4 class="mb-3">{% trans 'Zone templates for' %} {{ username }}</h4>
-<table class="table table-striped table-hover">
+<h5 class="mb-3">{% trans 'Zone templates for' %} {{ username }}</h5>
+<table class="table table-striped table-hover table-sm">
     <thead>
     <tr>
         <th>{% trans 'Name' %}</th>
@@ -27,5 +27,5 @@
 
 </table>
 <div>
-    <a class="btn btn-primary" href="add_zone_templ.php">{% trans 'Add zone template' %}</a>
+    <a class="btn btn-primary btn-sm" href="add_zone_templ.php">{% trans 'Add zone template' %}</a>
 </div>
