--- a/install/templates/step6.html
+++ b/install/templates/step6.html
@@ -36,5 +36,5 @@ $ignore_install_dir = true;
 <form method="post">
     <input type="hidden" name="step" value="{{ next_step }}">
     <input type="hidden" name="language" value="{{ language }}">
-    <input type="submit" name="submit" class="btn btn-primary" value="{% trans 'Go to step' %} {{ next_step }}">
+    <input type="submit" name="submit" class="btn btn-primary btn-sm" value="{% trans 'Go to step' %} {{ next_step }}">
 </form>
