--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -1,17 +1,17 @@
-<h4 class="mb-3">{% trans 'Add zone template for' %} {{ username }}</h4>
+<h5 class="mb-3">{% trans 'Add zone template for' %} {{ username }}</h5>
 <form method="post" action="add_zone_templ.php">
     <table>
         <tr>
             <td width="150">{% trans 'Name' %}</td>
-            <td><input class="form-control" type="text" name="templ_name" value=""></td>
+            <td><input class="form-control form-control-sm" type="text" name="templ_name" value=""></td>
         </tr>
         <tr>
             <td>{% trans 'Description' %}</td>
-            <td><input class="form-control" type="text" name="templ_descr" value=""></td>
+            <td><input class="form-control form-control-sm" type="text" name="templ_descr" value=""></td>
         </tr>
         <tr>
             <td></td>
-            <td><input type="submit" class="btn btn-primary" name="commit" value="{% trans 'Add zone template' %}"></td>
+            <td><input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans 'Add zone template' %}"></td>
         </tr>
     </table>
 
