--- a/templates/bulk_registration.html
+++ b/templates/bulk_registration.html
@@ -1,11 +1,11 @@
-<h4 class="mb-3">{% trans 'Bulk registration' %}</h4>
+<h5 class="mb-3">{% trans 'Bulk registration' %}</h5>
 
 <form method="post" action="bulk_registration.php">
     <table>
         <tr>
             <td>{% trans 'Owner' %}:</td>
             <td>
-                <select class="form-select" name="owner">
+                <select class="form-select form-select-sm" name="owner">
                     {% for user in users %}
                     {% if user['id'] == userid %}
                     <option value="{{ user['id'] }}" selected>{{ user['fullname'] }}</option>
@@ -19,7 +19,7 @@
         <tr>
             <td>{% trans 'Type' %}:</td>
             <td>
-                <select class="form-select" name="dom_type">
+                <select class="form-select form-select-sm" name="dom_type">
                     {% for type in available_zone_types %}
                     {% if type == iface_zone_type_default %}
                     {% set selected = 'selected' %}
@@ -34,7 +34,7 @@
         <tr>
             <td>{% trans 'Template' %}:</td>
             <td>
-                <select class="form-select" name="zone_template">
+                <select class="form-select form-select-sm" name="zone_template">
                     <option value="none">none</option>
                     {% for zone_template in zone_templates %}
                     <option value="{{ zone_template['id'] }}">{{ zone_template['name'] }}</option>
@@ -49,7 +49,7 @@
                 <ul id="domain_names" style="list-style-type:none; padding:0 ">
                     <li>{% trans 'Type one domain per line' %}:</li>
                     <li>
-                        <textarea class="form-control" name="domains" rows="10" cols="30" style="width: 500px;">{% if error and domains %}{{ domains | join('\n') }}{% endif %}</textarea>
+                        <textarea class="form-control form-control-sm" name="domains" rows="10" cols="30" style="width: 500px;">{% if error and domains %}{{ domains | join('\n') }}{% endif %}</textarea>
                     </li>
                 </ul>
             </td>
@@ -58,7 +58,7 @@
         <tr>
             <td>&nbsp;</td>
             <td>
-                <input type="submit" class="btn btn-primary" name="submit" value="{% trans 'Add zones' %}">
+                <input type="submit" class="btn btn-primary btn-sm" name="submit" value="{% trans 'Add zones' %}">
             </td>
         </tr>
     </table>
