--- a/templates/delete_perm_templ.html
+++ b/templates/delete_perm_templ.html
@@ -1,5 +1,5 @@
-<h4 class="mb-3">{% trans 'Delete permission template' %} "{{ templ_name }}"</h4>
+<h5 class="mb-3">{% trans 'Delete permission template' %} "{{ templ_name }}"</h5>
 
 <p>{% trans 'Are you sure?' %}</p>
-<input type="button" class="btn btn-primary" onClick="location.href='delete_perm_templ.php?id={{ perm_templ_id }}&confirm=1'" value="{% trans 'Yes' %}">
-<input type="button" class="btn btn-secondary" onClick="location.href='index.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-primary btn-sm" onClick="location.href='delete_perm_templ.php?id={{ perm_templ_id }}&confirm=1'" value="{% trans 'Yes' %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php'" value="{% trans 'No' %}">
