--- a/templates/delete_record.html
+++ b/templates/delete_record.html
@@ -1,6 +1,6 @@
-<h4 class="mb-3">{% trans 'Delete record in zone' %} "<a href="edit.php?id={{ zid }}">{{ zone_name }}</a>"</h4>
+<h5 class="mb-3">{% trans 'Delete record in zone' %} "<a href="edit.php?id={{ zid }}">{{ zone_name }}</a>"</h5>
 
-<table class="table">
+<table class="table table-striped table-sm">
     <thead>
     <tr>
         <th>Name</th>
@@ -28,6 +28,6 @@
 <p>{% trans 'You are trying to delete a record that is needed for this zone to work.' %}</p>
 {% endif %}
 <p>{% trans 'Are you sure?' %}</p>
-<input type="button" class="btn btn-primary" onClick="location.href='delete_record.php?id={{ record_id }}&confirm=1'"
+<input type="button" class="btn btn-primary btn-sm" onClick="location.href='delete_record.php?id={{ record_id }}&confirm=1'"
        value="{% trans 'Yes' %}">
-<input type="button" class="btn btn-secondary" onClick="location.href='edit.php?id={{ zid }}'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='edit.php?id={{ zid }}'" value="{% trans 'No' %}">
