--- a/templates/delete_zone_templ_record.html
+++ b/templates/delete_zone_templ_record.html
@@ -1,6 +1,6 @@
-<h4 class="mb-3">{% trans 'Delete record in zone' %} "{{ templ_details['name'] }}"</h4>
+<h5 class="mb-3">{% trans 'Delete record in zone' %} "{{ templ_details['name'] }}"</h5>
 
-<table class="table">
+<table class="table table-striped table-sm">
     <thead>
     <tr>
         <th>Name</th>
@@ -21,7 +21,7 @@
     </tbody>
 </table>
 <p>{% trans 'Are you sure?' %}</p>
-<input type="button" class="btn btn-primary"
+<input type="button" class="btn btn-primary btn-sm"
        onClick="location.href='delete_zone_templ_record.php?id={{ record_id }}&zone_templ_id={{ zone_templ_id }}&confirm=1'"
        value="{% trans 'Yes' %}">
-<input type="button" class="btn btn-secondary" onClick="location.href='list_zone_templ.php'" value="{% trans 'No' %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='list_zone_templ.php'" value="{% trans 'No' %}">
