--- a/templates/edit_perm_templ.html
+++ b/templates/edit_perm_templ.html
@@ -1,15 +1,15 @@
-<h4 class="mb-3">{% trans 'Edit permission template' %}</h4>
+<h5 class="mb-3">{% trans 'Edit permission template' %}</h5>
 <form method="post" action="">
     <input type="hidden" name="templ_id" value="{{ id }}">
 
     <table>
         <tr>
             <td width="100">{% trans 'Name' %}</td>
-            <td><input class="form-control" type="text" name="templ_name" value="{{ templ['name'] }}"></td>
+            <td><input class="form-control form-control-sm" type="text" name="templ_name" value="{{ templ['name'] }}"></td>
         </tr>
         <tr>
             <td>{% trans 'Description' %}</td>
-            <td><input class="form-control" type="text" name="templ_descr" value="{{ templ['descr'] }}"></td>
+            <td><input class="form-control form-control-sm" type="text" name="templ_descr" value="{{ templ['descr'] }}"></td>
         </tr>
     </table>
     <p></p>
@@ -39,5 +39,5 @@
         {% endfor %}
         </tbody>
     </table>
-    <input type="submit" class="btn btn-primary" name="commit" value="{% trans 'Commit changes' %}">
+    <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans 'Commit changes' %}">
 </form>
