--- a/templates/list_perm_templ.html
+++ b/templates/list_perm_templ.html
@@ -1,5 +1,5 @@
-<h4 class="mb-3">{% trans 'Permission templates' %}</h4>
-<table class="table table-striped table-hover">
+<h5 class="mb-3">{% trans 'Permission templates' %}</h5>
+<table class="table table-striped table-hover table-sm">
     <thead>
     <tr>
         <th>{% trans 'Name' %}</th>
@@ -21,5 +21,5 @@
 </table>
 
 <div>
-    <a class="btn btn-primary" href="add_perm_templ.php">{% trans 'Add permission template' %}</a>
+    <a class="btn btn-primary btn-sm" href="add_perm_templ.php">{% trans 'Add permission template' %}</a>
 </div>
