--- a/templates/list_supermasters.html
+++ b/templates/list_supermasters.html
@@ -1,5 +1,5 @@
-<h4 class="mb-3">{% trans 'List supermasters' %}</h4>
-<table class="table table-striped table-hover">
+<h5 class="mb-3">{% trans 'List supermasters' %}</h5>
+<table class="table table-striped table-hover table-sm">
     <thead>
     <tr>
         <th>{% trans 'IP address of supermaster' %}</th>
@@ -38,5 +38,5 @@
     </tbody>
 </table>
 <div>
-    <a class="btn btn-primary" href="add_supermaster.php">{% trans 'Add supermaster' %}</a>
+    <a class="btn btn-primary btn-sm" href="add_supermaster.php">{% trans 'Add supermaster' %}</a>
 </div>
