--- a/templates/index.html
+++ b/templates/index.html
@@ -40,9 +40,9 @@
             <i class="bi bi-plus-circle"></i> <a href="bulk_registration.php">{% trans 'Bulk registration' %}</a>
         </li>
     {% endif %}
-    {% if perm_supermaster_add and mysql_logs ==  true %}
+    {% if perm_is_godlike and dblog_use ==  true %}
     <li class="list-group-item list-group-item-action">
-        <i class="bi bi-list-ul"></i> <a href="list_logs.php">{% trans 'List logs' %}</a>
+        <i class="bi bi-list-ul"></i> <a href="list_logs.php">{% trans 'Logs' %}</a>
     </li>
     {% endif %}
     {% if auth_used != "ldap" %}
