Removed reference to syslog.

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
     {% endif %}
     {% if perm_is_godlike and dblog_use ==  true %}
     <li class="list-group-item list-group-item-action">
-        <i class="bi bi-list-ul"></i> <a href="list_logs.php">{% trans 'Logs' %}</a>
+        <i class="bi bi-list-ul"></i> <a href="list_logs.php">{% trans 'Show logs' %}</a>
     </li>
     {% endif %}
     {% if auth_used != "ldap" %}
