--- a/templates/header.html
+++ b/templates/header.html
@@ -43,7 +43,7 @@
                             <a href="list_zones.php" class="nav-link text-secondary"><i class="bi bi-diagram-3"></i></a>
                             <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                                href="#"
-                               role="button" aria-expanded="false">{% trans 'Zones' %}</a>
+                               role="button">{% trans 'Zones' %}</a>
                             <ul class="dropdown-menu">
                                 {% if perm_view_zone_own or perm_view_zone_other %}
                                     <li><a class="dropdown-item" href="list_zones.php">{% trans 'List zones' %}</a></li>
@@ -68,7 +68,7 @@
                         <a href="users.php" class="nav-link text-secondary"><i class="bi bi-people"></i></a>
                         <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                            href="#"
-                           role="button" aria-expanded="false">{% trans 'Users' %}</a>
+                           role="button">{% trans 'Users' %}</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="users.php">{% trans 'User administration' %}</a></li>
                             {% if perm_add_new %}
@@ -91,7 +91,7 @@
                                     class="bi bi-files"></i></a>
                             <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                                href="#"
-                               role="button" aria-expanded="false">{% trans 'Templates' %}</a>
+                               role="button">{% trans 'Templates' %}</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item"
                                        href="list_zone_templ.php">{% trans 'List zone templates' %}</a></li>
@@ -104,7 +104,7 @@
                         <a href="#" class="nav-link text-secondary"><i class="bi bi-person-circle"></i></a>
                         <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                            href="#"
-                           role="button" aria-expanded="false">{% trans 'Account' %}</a>
+                           role="button">{% trans 'Account' %}</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
                                    href="change_password.php">{% trans 'Change password' %}</a></li>
